--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
         "declaration": true,
         "esModuleInterop": true,
         "experimentalDecorators": true,
+        "skipLibCheck": true,
         "lib": [
             "dom",
             "es2015",
